--- a/lemp-stack/modules/web/default-host.conf
+++ b/lemp-stack/modules/web/default-host.conf
@@ -1,7 +1,7 @@
 server {
     listen  80;
 
-    root /server/http;
+    root /server/http/web-app/public;
     index index.html index.htm index.php;
 
     access_log off;
